apps/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-nginx
  # Namespace slouží k logickému oddělení aplikací.
  # Umožňuje přehled, práva (RBAC) a jednodušší úklid.
