apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: demo-nginx
spec:
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
